[metadata]
name = facutools
version = attr: facutools.__version__
author = Tomás Barak
author_email = softvisiondevelop@gmail.com
description = Tools for facuamigo.ar
url = https://github.com/facuamigo/facutools
project_urls =
    Bug Tracker = https://github.com/facuamigo/facutools/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
package_dir = = src
python_requires = >= 3.12
install_requires =
    python-dotenv
    google-cloud-dialogflow-cx
    google-cloud-discoveryengine
    Flask


[options.packages.find]
where = src

[tool:pytest]
testpaths = tests